fixed overflow in CharacterDetails comics list

--- a/src/pages/characterDetails/CharacterDetails.scss
+++ b/src/pages/characterDetails/CharacterDetails.scss
@@ -27,6 +27,7 @@
     background-color: #2c2c2c;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
 
     @media (max-width: 640px) {
       padding: 5px;
@@ -61,14 +62,47 @@
       }
     }
 
-    .character-name {
-      font-size: 1.75rem;
-      font-weight: 700;
-      color: red;
-      margin-bottom: 40px;
+    .character-name-container {
+      position: relative;
 
-      @media (max-width: 640px) {
-        font-size: 1.25rem;
+      .character-name {
+        font-size: 1.75rem;
+        font-weight: 700;
+        color: red;
+        margin-bottom: 40px;
+
+        @media (max-width: 640px) {
+          font-size: 1.25rem;
+        }
+      }
+
+      .fa-heart {
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+      .fa-heart:hover {
+        cursor: pointer;
+      }
+
+      .fa-regular {
+        font-size: 2rem;
+        text-align: right;
+        color: lightgray;
+
+        @media (max-width: 640px) {
+          font-size: 1.25rem;
+        }
+      }
+
+      .fa-solid {
+        font-size: 2rem;
+        text-align: right;
+        color: red;
+
+        @media (max-width: 640px) {
+          font-size: 1.25rem;
+        }
       }
     }
 
@@ -82,30 +116,6 @@
       li {
         margin: 10px 0 0 10px;
         color: gray;
-      }
-    }
-
-    .fa-heart:hover {
-      cursor: pointer;
-    }
-
-    .fa-regular {
-      font-size: 2rem;
-      text-align: right;
-      color: lightgray;
-
-      @media (max-width: 640px) {
-        font-size: 1.25rem;
-      }
-    }
-
-    .fa-solid {
-      font-size: 2rem;
-      text-align: right;
-      color: red;
-
-      @media (max-width: 640px) {
-        font-size: 1.25rem;
       }
     }
   }
